<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cvService1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:visibility="gone"
        card_view:cardBackgroundColor="#209765fd"
        card_view:cardCornerRadius="4dp"
        card_view:contentPadding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/service1"
            android:textColor="@color/side_bar_color"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvService2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="#20ff0000"
        card_view:cardCornerRadius="4dp"
        card_view:contentPadding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/service2"
            android:textColor="@color/side_bar_color"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvService3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="#209765fd"
        card_view:cardCornerRadius="4dp"
        card_view:contentPadding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/service3"
            android:textColor="@color/side_bar_color"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvService4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="#20ff0000"
        card_view:cardCornerRadius="4dp"
        card_view:contentPadding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/service4"
            android:textColor="@color/side_bar_color"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvService5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="#209765fd"
        card_view:cardCornerRadius="4dp"
        card_view:contentPadding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/service5"
            android:textColor="@color/side_bar_color"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvService6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="#20ff0000"
        card_view:cardCornerRadius="4dp"
        card_view:contentPadding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/service6"
            android:textColor="@color/side_bar_color"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvService7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:visibility="gone"
        card_view:cardBackgroundColor="#20ff0000"
        card_view:cardCornerRadius="4dp"
        card_view:contentPadding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/service7"
            android:textColor="@color/side_bar_color"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvService8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="#209765fd"
        card_view:cardCornerRadius="4dp"
        card_view:contentPadding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/service8"
            android:textColor="@color/side_bar_color"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

</LinearLayout>